Basics/1.3/errors/declarationv6.c.error
// let me try initialising c variables in rust way, will it work? the K and R does not mention this. 

// #include <stdio.h> Intentionally we comment this out...

// What happens without this preprocessor include? Will printf not be available? Check in v6

int main(void) { int v = 100; int u = 300; int z = 200; printf("%d\t%d\t%d\n", v, u, z);}

// Ah, the valid and ugly syntax. I mean this is not a syntax anymore. Just raw instructions seperated inside a function by `;` just like precious bash scripts. C is essentially a bash script! (just kidding.); But tbh, even bash has a syntax, but here this seems something easy? Write C, need to syntax?

## This is the error that will be produced....

declarationv6.c:7:57: error: call to undeclared library function 'printf' with type 'int (const char *, ...)'; ISO C99 and
      later do not support implicit function declarations [-Wimplicit-function-declaration]
    7 | int main(void) { int v = 100; int u = 300; int z = 200; printf("%d\t%d\t%d\n", v, u, z);}
      |                                                         ^
declarationv6.c:7:57: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
1 error generated.

attempt to call undeclared libraray function.... Or we should atleast declare the function. Then let me declare that empty function then...
